--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=22.0.0"
   },
   "scripts": {
-    "dev": "tsx watch src/app.ts",
+    "dev": "tsx watch --env-file=.env src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
     "test": "vitest run",
