feat: variáveis de ambiente para enriquecimento

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ NODE_ENV=development
 THRESHOLD_SIMILARIDADE=0.4
 THRESHOLD_LLM=0.8
 LIMITE_PARES_POR_EXECUCAO=200
+
+# Enriquecimento — APIs externas para nome oficial
+GOOGLE_GEOCODING_API_KEY=
+ENRIQUECIMENTO_HABILITADO=true
+VIACEP_MAX_CEPS_POR_MEMBRO=10
+VIACEP_CACHE_TTL_DIAS=7
+GOOGLE_CACHE_TTL_DIAS=30
