docs: README completo e .env.example atualizado para publicação
Adiciona documentação do microserviço cobrindo arquitetura, API,
pipeline de detecção, tabelas, FKs afetadas e setup local.
Atualiza .env.example com variável OPENAI_API_KEY.

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ THRESHOLD_SIMILARIDADE=0.4
 THRESHOLD_LLM=0.8
 LIMITE_PARES_POR_EXECUCAO=200
 
+# OpenAI API para validação LLM de duplicatas (opcional)
+OPENAI_API_KEY=sk-...
+
 # Enriquecimento — APIs externas para nome oficial
 GOOGLE_GEOCODING_API_KEY=
 ENRIQUECIMENTO_HABILITADO=true
